# PyBit7z

./: .gitignore  LICENSE  README.md  build.txt  lib7z.hpp  pyproject.toml  setup.py  structure.txt  sysinfo.hpp
.github/workflows/: ci.yml
bit7z/: BUILD.txt
bit7z-msvc-2022/lib/x64/Release/: bit7z.lib
bit7z_python/: __init__.py
evp/: PyBit7z.hpp
include/: CMakeLists.txt  example.cpp  pyos.cpp  pyos.hpp  pyos_export.h.in  time.hpp
include/pyos/: pyos.hpp
include/pyos/Debug/: pyos.lib
lib7z/: test.cpp  test.py  test_result.txt
src/: API.hpp  Bit7zLibrary_EVP.cpp  BitFileCompressor_EVP.cpp  BitFormat_EVP.cpp  enums.cpp  format_cvt.hpp
test/: test.cpp  test.py  test_result.txt
